[package]
name = "marzullo"
version = "0.1.0"
edition = "2021"
authors = ["Ahmed Tadde <https://github.com/ahmedtadde>"]
description = "Marzullo's algorithm"
readme = "README.md"
homepage = "https://github.com/ahmedtadde/marzullo-rs/"
repository = "https://github.com/ahmedtadde/marzullo-rs/"
license-file = "LICENSE"
keywords = ["clocks", "disttributed-systems", "marzullo", "true-time"]
include = [
    "**/*.rs",
    "Cargo.toml",
]


[badges.maintenance]
status = "actively-developed"
